--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "say-it": "./index.js"
   },
   "dependencies": {
-    "commander": "^2.15.1"
+    "commander": "^2.15.1",
+    "superagent": "^3.8.2"
   }
 }
